--- a/fiba_basketball-app-manifest.json
+++ b/fiba_basketball-app-manifest.json
@@ -6,26 +6,26 @@
                 "wallpaper": [
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh4.googleusercontent.com/-3Ch9CkSKpB4/U-y-O2TIZNI/AAAAAAAACcA/KA1yFOeEXoo/w912-h513-no/muller.jpg",
-                        "thumbUrl": "https://lh4.googleusercontent.com/-3Ch9CkSKpB4/U-y-O2TIZNI/AAAAAAAACcA/KA1yFOeEXoo/w912-h513-no/muller.jpg",
+                        "url": "https://lh5.googleusercontent.com/-Ymw1gubNSoY/VBQxekYeBFI/AAAAAAAAChY/so7_QIRgafI/w731-h457-no/basketball-hd-wallpapers-cool-desktop-images-widescreen.jpg",
+                        "thumbUrl": "https://lh5.googleusercontent.com/-Ymw1gubNSoY/VBQxekYeBFI/AAAAAAAAChY/so7_QIRgafI/w731-h457-no/basketball-hd-wallpapers-cool-desktop-images-widescreen.jpg",
                         "name": "WP 1"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh6.googleusercontent.com/-vxXmG-o30pk/U-zChbn6CLI/AAAAAAAACck/migwmLMfU_8/w950-h513-no/Germany-Fifa-World-Cup-2014-Champion...jpg",
-                        "thumbUrl": "https://lh6.googleusercontent.com/-vxXmG-o30pk/U-zChbn6CLI/AAAAAAAACck/migwmLMfU_8/w950-h513-no/Germany-Fifa-World-Cup-2014-Champion...jpg",
+                        "url": "https://lh6.googleusercontent.com/-vp2Gn4nF7DI/VBQxTQDesRI/AAAAAAAACg8/CkCkePks3LY/w571-h457-no/Basketball-Wallpapers-94.jpg",
+                        "thumbUrl": "https://lh6.googleusercontent.com/-vp2Gn4nF7DI/VBQxTQDesRI/AAAAAAAACg8/CkCkePks3LY/w571-h457-no/Basketball-Wallpapers-94.jpg",
                         "name": "WP 2"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh5.googleusercontent.com/-w9VkPPJ1MY4/U-y81DwxzwI/AAAAAAAACa0/o4jsIkkuYq8/w715-h513-no/Argentina-Lionel-Messi-Wallpaper.jpg",
-                        "thumbUrl": "https://lh5.googleusercontent.com/-w9VkPPJ1MY4/U-y81DwxzwI/AAAAAAAACa0/o4jsIkkuYq8/w715-h513-no/Argentina-Lionel-Messi-Wallpaper.jpg",
+                        "url": "https://lh6.googleusercontent.com/-XvdGbYcc1_Q/VBQxg-igsqI/AAAAAAAAChk/oCGiwMvhfe8/w483-h332-no/bjelica.jpg",
+                        "thumbUrl": "https://lh6.googleusercontent.com/-XvdGbYcc1_Q/VBQxg-igsqI/AAAAAAAAChk/oCGiwMvhfe8/w483-h332-no/bjelica.jpg",
                         "name": "WP 3"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh4.googleusercontent.com/-MpwJltO9PQE/U-y81clGyJI/AAAAAAAACa4/jyXrSExNKKI/w912-h513-no/Arjen-Robben-Bayern-Munchen-pictures-wallpapers-1024x576.jpg",
-                        "thumbUrl": "https://lh4.googleusercontent.com/-MpwJltO9PQE/U-y81clGyJI/AAAAAAAACa4/jyXrSExNKKI/w912-h513-no/Arjen-Robben-Bayern-Munchen-pictures-wallpapers-1024x576.jpg",
+                        "url": "https://lh5.googleusercontent.com/-Qv30QWPmE3s/VBQxtvRYiJI/AAAAAAAACh0/gGr9jvT_G6c/w524-h457-no/Dunk-Basketball-Wallpaper.jpg",
+                        "thumbUrl": "https://lh5.googleusercontent.com/-Qv30QWPmE3s/VBQxtvRYiJI/AAAAAAAACh0/gGr9jvT_G6c/w524-h457-no/Dunk-Basketball-Wallpaper.jpg",
                         "name": "WP 4"
                     }
                 ]
@@ -35,26 +35,26 @@
                 "wallpaper": [
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh4.googleusercontent.com/-GqJHdcvtOQ4/U-y84AKNvcI/AAAAAAAACbQ/eyZEKZ2KdaU/w912-h513-no/brazil_football_wallpaper-1480450.jpg",
-                        "thumbUrl": "https://lh4.googleusercontent.com/-GqJHdcvtOQ4/U-y84AKNvcI/AAAAAAAACbQ/eyZEKZ2KdaU/w912-h513-no/brazil_football_wallpaper-1480450.jpg",
+                        "url": "https://lh5.googleusercontent.com/-W4b3-SwewaA/VBQxeRtb-1I/AAAAAAAAChc/aLy7nvzI7Ug/w672-h457-no/Macedonia_Bo_McCalebb_Wallpapers.png",
+                        "thumbUrl": "https://lh5.googleusercontent.com/-W4b3-SwewaA/VBQxeRtb-1I/AAAAAAAAChc/aLy7nvzI7Ug/w672-h457-no/Macedonia_Bo_McCalebb_Wallpapers.png",
                         "name": "WP 1"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh4.googleusercontent.com/9iviz9z8UvyuOmblS1O-9MtXMVKfmcSs8UnzRJ3TRqA=w700-h427-no",
-                        "thumbUrl": "https://lh4.googleusercontent.com/9iviz9z8UvyuOmblS1O-9MtXMVKfmcSs8UnzRJ3TRqA=w700-h427-no",
+                        "url": "https://lh3.googleusercontent.com/-wT99dOKWQfQ/VBQxX3-gdEI/AAAAAAAAChE/6u280nNtv-I/w572-h457-no/Serge_Ibaka_Basketball_Wallpapers.jpg",
+                        "thumbUrl": "https://lh3.googleusercontent.com/-wT99dOKWQfQ/VBQxX3-gdEI/AAAAAAAAChE/6u280nNtv-I/w572-h457-no/Serge_Ibaka_Basketball_Wallpapers.jpg",
                         "name": "WP 2"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh5.googleusercontent.com/-7wujQGcONic/U-y822CpjrI/AAAAAAAACbE/B9ruxqarppI/w684-h513-no/FIFA-World-Cup-2014-Brazil-HD-Wallpaper.jpg",
-                        "thumbUrl": "https://lh5.googleusercontent.com/-7wujQGcONic/U-y822CpjrI/AAAAAAAACbE/B9ruxqarppI/w684-h513-no/FIFA-World-Cup-2014-Brazil-HD-Wallpaper.jpg",
+                        "url": "https://lh3.googleusercontent.com/-7PLcntBSx_I/VBQxaDncBBI/AAAAAAAAChM/vtFaJHmKC8Q/w483-h332-no/Small_rose_1_.jpg",
+                        "thumbUrl": "https://lh3.googleusercontent.com/-7PLcntBSx_I/VBQxaDncBBI/AAAAAAAAChM/vtFaJHmKC8Q/w483-h332-no/Small_rose_1_.jpg",
                         "name": "WP 3"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh3.googleusercontent.com/-xOdlS722l9s/U-y9pbyrYKI/AAAAAAAACbw/67IZb5FMllA/w761-h513-no/messi-goal-wallpaper-hd.jpg",
-                        "thumbUrl": "https://lh3.googleusercontent.com/-xOdlS722l9s/U-y9pbyrYKI/AAAAAAAACbw/67IZb5FMllA/w761-h513-no/messi-goal-wallpaper-hd.jpg",
+                        "url": "https://lh6.googleusercontent.com/-EtyeOeMs1Bo/VBQxjkysqYI/AAAAAAAAChs/DkjFvZi93tY/w640-h457-no/dFaZUa2a586JtIY2DpZR-m.png",
+                        "thumbUrl": "https://lh6.googleusercontent.com/-EtyeOeMs1Bo/VBQxjkysqYI/AAAAAAAAChs/DkjFvZi93tY/w640-h457-no/dFaZUa2a586JtIY2DpZR-m.png",
                         "name": "WP 4"
                     }
                 ]
