--- a/fifa_wallpapers-app2-manifest.json
+++ b/fifa_wallpapers-app2-manifest.json
@@ -2,59 +2,59 @@
     "wallpapers": {
         "category": [
             {
-                "name": "Random",
+                "name": "Victory",
                 "wallpaper": [
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh5.googleusercontent.com/-Ymw1gubNSoY/VBQxekYeBFI/AAAAAAAAChY/so7_QIRgafI/w731-h457-no/basketball-hd-wallpapers-cool-desktop-images-widescreen.jpg",
-                        "thumbUrl": "https://lh5.googleusercontent.com/-Ymw1gubNSoY/VBQxekYeBFI/AAAAAAAAChY/so7_QIRgafI/w731-h457-no/basketball-hd-wallpapers-cool-desktop-images-widescreen.jpg",
+                        "url": "https://lh6.googleusercontent.com/-MT56H3hoy4s/VBaaGKp9YKI/AAAAAAAACjo/zqjzIc2g8ZQ/w812-h457-no/German-Champion-FIFA-World-Cup-2014-Wallpaper.jpg",
+                        "thumbUrl": "https://lh6.googleusercontent.com/-MT56H3hoy4s/VBaaGKp9YKI/AAAAAAAACjo/zqjzIc2g8ZQ/w812-h457-no/German-Champion-FIFA-World-Cup-2014-Wallpaper.jpg",
                         "name": "WP 1"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh6.googleusercontent.com/-vp2Gn4nF7DI/VBQxTQDesRI/AAAAAAAACg8/CkCkePks3LY/w571-h457-no/Basketball-Wallpapers-94.jpg",
-                        "thumbUrl": "https://lh6.googleusercontent.com/-vp2Gn4nF7DI/VBQxTQDesRI/AAAAAAAACg8/CkCkePks3LY/w571-h457-no/Basketball-Wallpapers-94.jpg",
+                        "url": "https://lh3.googleusercontent.com/-iziGnmOCzc4/VBabyHWAL6I/AAAAAAAACkw/UmSowm-uCw4/w812-h457-no/klose_wallpaper_by_meteorblade-d6gntn0.jpg",
+                        "thumbUrl": "https://lh3.googleusercontent.com/-iziGnmOCzc4/VBabyHWAL6I/AAAAAAAACkw/UmSowm-uCw4/w812-h457-no/klose_wallpaper_by_meteorblade-d6gntn0.jpg",
                         "name": "WP 2"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh6.googleusercontent.com/-XvdGbYcc1_Q/VBQxg-igsqI/AAAAAAAAChk/oCGiwMvhfe8/w483-h332-no/bjelica.jpg",
-                        "thumbUrl": "https://lh6.googleusercontent.com/-XvdGbYcc1_Q/VBQxg-igsqI/AAAAAAAAChk/oCGiwMvhfe8/w483-h332-no/bjelica.jpg",
+                        "url": "https://lh4.googleusercontent.com/-AixWYJOVFw4/VBadBcTe_6I/AAAAAAAAClA/tDC5DkEnXlE/s457-no/adidas-brazuca-ball-workd-cup-2014-designboom08.jpg",
+                        "thumbUrl": "https://lh4.googleusercontent.com/-AixWYJOVFw4/VBadBcTe_6I/AAAAAAAAClA/tDC5DkEnXlE/s457-no/adidas-brazuca-ball-workd-cup-2014-designboom08.jpg",
                         "name": "WP 3"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh5.googleusercontent.com/-Qv30QWPmE3s/VBQxtvRYiJI/AAAAAAAACh0/gGr9jvT_G6c/w524-h457-no/Dunk-Basketball-Wallpaper.jpg",
-                        "thumbUrl": "https://lh5.googleusercontent.com/-Qv30QWPmE3s/VBQxtvRYiJI/AAAAAAAACh0/gGr9jvT_G6c/w524-h457-no/Dunk-Basketball-Wallpaper.jpg",
+                        "url": "https://lh4.googleusercontent.com/-e_69QWwf5tU/VBaaNcjERpI/AAAAAAAACkI/ijkkYmXdoNA/w812-h457-no/messi-after-celebrating-his-second-goal-agains-nigeria.jpg",
+                        "thumbUrl": "https://lh4.googleusercontent.com/-e_69QWwf5tU/VBaaNcjERpI/AAAAAAAACkI/ijkkYmXdoNA/w812-h457-no/messi-after-celebrating-his-second-goal-agains-nigeria.jpg",
                         "name": "WP 4"
                     }
                 ]
             },
             {
-                "name": "Hits",
+                "name": "Top",
                 "wallpaper": [
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh5.googleusercontent.com/-W4b3-SwewaA/VBQxeRtb-1I/AAAAAAAAChc/aLy7nvzI7Ug/w672-h457-no/Macedonia_Bo_McCalebb_Wallpapers.png",
-                        "thumbUrl": "https://lh5.googleusercontent.com/-W4b3-SwewaA/VBQxeRtb-1I/AAAAAAAAChc/aLy7nvzI7Ug/w672-h457-no/Macedonia_Bo_McCalebb_Wallpapers.png",
+                        "url": "https://lh4.googleusercontent.com/-6b7TgA8ZH_s/VBaaOrc_u8I/AAAAAAAACkQ/DD54P3LHzsQ/w812-h457-no/neymar-brazil-football-wallpaper.jpg",
+                        "thumbUrl": "https://lh4.googleusercontent.com/-6b7TgA8ZH_s/VBaaOrc_u8I/AAAAAAAACkQ/DD54P3LHzsQ/w812-h457-no/neymar-brazil-football-wallpaper.jpg",
                         "name": "WP 1"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh3.googleusercontent.com/-wT99dOKWQfQ/VBQxX3-gdEI/AAAAAAAAChE/6u280nNtv-I/w572-h457-no/Serge_Ibaka_Basketball_Wallpapers.jpg",
-                        "thumbUrl": "https://lh3.googleusercontent.com/-wT99dOKWQfQ/VBQxX3-gdEI/AAAAAAAAChE/6u280nNtv-I/w572-h457-no/Serge_Ibaka_Basketball_Wallpapers.jpg",
+                        "url": "https://lh6.googleusercontent.com/-an5Hm_JYQEc/VBaaUuaJc8I/AAAAAAAACkY/XYACTHUvHPo/w731-h457-no/the-brazil-national-football-team-celebration-hd-wallpaper.jpg",
+                        "thumbUrl": "https://lh6.googleusercontent.com/-an5Hm_JYQEc/VBaaUuaJc8I/AAAAAAAACkY/XYACTHUvHPo/w731-h457-no/the-brazil-national-football-team-celebration-hd-wallpaper.jpg",
                         "name": "WP 2"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh3.googleusercontent.com/-7PLcntBSx_I/VBQxaDncBBI/AAAAAAAAChM/vtFaJHmKC8Q/w483-h332-no/Small_rose_1_.jpg",
-                        "thumbUrl": "https://lh3.googleusercontent.com/-7PLcntBSx_I/VBQxaDncBBI/AAAAAAAAChM/vtFaJHmKC8Q/w483-h332-no/Small_rose_1_.jpg",
+                        "url": "https://lh5.googleusercontent.com/-V5nQhDKqhDU/VBaaMSE-KUI/AAAAAAAACj8/8_EOMfT0SVI/w738-h457-no/Arjen-Robben-10.jpg",
+                        "thumbUrl": "https://lh5.googleusercontent.com/-V5nQhDKqhDU/VBaaMSE-KUI/AAAAAAAACj8/8_EOMfT0SVI/w738-h457-no/Arjen-Robben-10.jpg",
                         "name": "WP 3"
                     },
                     {
                         "author": "By Blah Blah Blah",
-                        "url": "https://lh6.googleusercontent.com/-EtyeOeMs1Bo/VBQxjkysqYI/AAAAAAAAChs/DkjFvZi93tY/w640-h457-no/dFaZUa2a586JtIY2DpZR-m.png",
-                        "thumbUrl": "https://lh6.googleusercontent.com/-EtyeOeMs1Bo/VBQxjkysqYI/AAAAAAAAChs/DkjFvZi93tY/w640-h457-no/dFaZUa2a586JtIY2DpZR-m.png",
+                        "url": "https://lh4.googleusercontent.com/-MmU9QBNi2WY/VBae_u24TFI/AAAAAAAAClQ/3M3Sf4sJFwU/w589-h457-no/342042.jpg",
+                        "thumbUrl": "https://lh4.googleusercontent.com/-MmU9QBNi2WY/VBae_u24TFI/AAAAAAAAClQ/3M3Sf4sJFwU/w589-h457-no/342042.jpg",
                         "name": "WP 4"
                     }
                 ]
