--- a/fastnfurious-app-manifest.json
+++ b/fastnfurious-app-manifest.json
@@ -18,8 +18,8 @@
               "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
               "name" : "John Andretti NASCAR Photography By Darryl Moran",
               "source" : "https://www.flickr.com/photos/dwmoran/3728188773/in/photostream/",
-              "thumbUrl" : "http://54.200.162.222/nascar/car15small.jpg",
-              "url" : "http://54.200.162.222/nascar/car15large.jpg"
+              "thumbUrl" : "http://www.theclippingpoint.net/blogs/wp-content/uploads/2014/02/Fast-Furious-7.jpg",
+              "url" : "http://www.theclippingpoint.net/blogs/wp-content/uploads/2014/02/Fast-Furious-7.jpg"
             } ]
       },
       { "name" : "Multi Color",
@@ -30,8 +30,8 @@
               "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
               "name" : "Phoenix International Raceway 1997 NASCAR",
               "source" : "https://www.flickr.com/photos/dwmoran/3728545775/in/photostream/",
-              "thumbUrl" : "http://54.200.162.222/nascar/car14small.jpg",
-              "url" : "http://54.200.162.222/nascar/car14large.jpg"
+              "thumbUrl" : "http://www.thevipconcierge.com/images/EventImages/825631413825631413825631413825631413.jpg",
+              "url" : "http://www.thevipconcierge.com/images/EventImages/825631413825631413825631413825631413.jpg"
             },
             { "attribution" : null,
               "author" : "Darryl Moran",
@@ -40,8 +40,8 @@
               "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
               "name" : "Phoenix International Speedway 1998 Kyle Petty",
               "source" : "https://www.flickr.com/photos/dwmoran/3728559819/in/photostream/",
-              "thumbUrl" : "http://54.200.162.222/nascar/car11small.jpg",
-              "url" : "http://54.200.162.222/nascar/car11large.jpg"
+              "thumbUrl" : "http://www.q8ryuk.com/wp-content/uploads/2014/11/fast-furious-7.jpg",
+              "url" : "http://www.q8ryuk.com/wp-content/uploads/2014/11/fast-furious-7.jpg"
             }
           ]
       }
