--- a/fastnfurious-app-manifest.json
+++ b/fastnfurious-app-manifest.json
@@ -42,6 +42,26 @@
               "source" : "https://www.flickr.com/photos/dwmoran/3728559819/in/photostream/",
               "thumbUrl" : "http://www.q8ryuk.com/wp-content/uploads/2014/11/fast-furious-7.jpg",
               "url" : "http://www.q8ryuk.com/wp-content/uploads/2014/11/fast-furious-7.jpg"
+            },
+             { "attribution" : null,
+              "author" : "Darryl Moran",
+              "author_url" : "https://www.flickr.com/photos/dwmoran/",
+              "license_name" : "CC-BY-SA-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
+              "name" : "Phoenix International Raceway 1997 NASCAR",
+              "source" : "https://www.flickr.com/photos/dwmoran/3728545775/in/photostream/",
+              "thumbUrl" : "http://fc02.deviantart.net/fs71/i/2014/253/e/e/fast_and_furious_7_poster_by_karimelmahalawy-d7yr27m.png",
+              "url" : "http://fc02.deviantart.net/fs71/i/2014/253/e/e/fast_and_furious_7_poster_by_karimelmahalawy-d7yr27m.png"
+            },
+            { "attribution" : null,
+              "author" : "Darryl Moran",
+              "author_url" : "https://www.flickr.com/photos/dwmoran/",
+              "license_name" : "CC-BY-SA-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
+              "name" : "Phoenix International Speedway 1998 Kyle Petty",
+              "source" : "https://www.flickr.com/photos/dwmoran/3728559819/in/photostream/",
+              "thumbUrl" : "http://fc05.deviantart.net/fs70/i/2011/118/c/5/paul_walker_2_fast_2_furious_by_londonicious-d3f2rta.jpg",
+              "url" : "http://fc05.deviantart.net/fs70/i/2011/118/c/5/paul_walker_2_fast_2_furious_by_londonicious-d3f2rta.jpg"
             }
           ]
       }
