--- a/fifa3-manifest.json
+++ b/fifa3-manifest.json
@@ -1,62 +1,69 @@
-{
-        "category": [
-            {
-                "name": "Victory",
-                "wallpaper": [
-                    {
-                        "author": "By Blah Blah Blah",
-                        "url": "https://lh6.googleusercontent.com/-MT56H3hoy4s/VBaaGKp9YKI/AAAAAAAACjo/zqjzIc2g8ZQ/w812-h457-no/German-Champion-FIFA-World-Cup-2014-Wallpaper.jpg",
-                        "thumbUrl": "https://lh6.googleusercontent.com/-MT56H3hoy4s/VBaaGKp9YKI/AAAAAAAACjo/zqjzIc2g8ZQ/w812-h457-no/German-Champion-FIFA-World-Cup-2014-Wallpaper.jpg",
-                        "name": "WP 1"
-                    },
-                    {
-                        "author": "By Blah Blah Blah",
-                        "url": "https://lh3.googleusercontent.com/-iziGnmOCzc4/VBabyHWAL6I/AAAAAAAACkw/UmSowm-uCw4/w812-h457-no/klose_wallpaper_by_meteorblade-d6gntn0.jpg",
-                        "thumbUrl": "https://lh3.googleusercontent.com/-iziGnmOCzc4/VBabyHWAL6I/AAAAAAAACkw/UmSowm-uCw4/w812-h457-no/klose_wallpaper_by_meteorblade-d6gntn0.jpg",
-                        "name": "WP 2"
-                    },
-                    {
-                        "author": "By Blah Blah Blah",
-                        "url": "https://lh4.googleusercontent.com/-AixWYJOVFw4/VBadBcTe_6I/AAAAAAAAClA/tDC5DkEnXlE/s457-no/adidas-brazuca-ball-workd-cup-2014-designboom08.jpg",
-                        "thumbUrl": "https://lh4.googleusercontent.com/-AixWYJOVFw4/VBadBcTe_6I/AAAAAAAAClA/tDC5DkEnXlE/s457-no/adidas-brazuca-ball-workd-cup-2014-designboom08.jpg",
-                        "name": "WP 3"
-                    },
-                    {
-                        "author": "By Blah Blah Blah",
-                        "url": "https://lh4.googleusercontent.com/-e_69QWwf5tU/VBaaNcjERpI/AAAAAAAACkI/ijkkYmXdoNA/w812-h457-no/messi-after-celebrating-his-second-goal-agains-nigeria.jpg",
-                        "thumbUrl": "https://lh4.googleusercontent.com/-e_69QWwf5tU/VBaaNcjERpI/AAAAAAAACkI/ijkkYmXdoNA/w812-h457-no/messi-after-celebrating-his-second-goal-agains-nigeria.jpg",
-                        "name": "WP 4"
-                    }
-                ]
+{ "category" : [ { "name" : "Fast And Furious 7",
+        "wallpaper" : [ { "attribution" : null,
+              "author" : "HDwallpapers.in",
+              "author_url" : "https://www.hdwallpapers.in",
+              "license_name" : "CC-BY-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
+              "name" : "Fast And Furious 1",
+              "source" : "https://www.flickr.com/photos/pocketwiley/1993993094/in/photostream/",
+              "thumbUrl" : "http://cdn.denofgeek.us/sites/denofgeekus/files/fast_and_furious_6-wide.jpg",
+              "url" : "http://cdn.denofgeek.us/sites/denofgeekus/files/fast_and_furious_6-wide.jpg"
+            }, 
+                        { "attribution" : null,
+              "author" : "Darryl Moran",
+              "author_url" : "https://www.flickr.com/photos/dwmoran/",
+              "license_name" : "CC-BY-SA-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
+              "name" : "Fast And Furious 2",
+              "source" : "https://www.flickr.com/photos/dwmoran/3728559819/in/photostream/",
+              "thumbUrl" : "http://www.q8ryuk.com/wp-content/uploads/2014/11/fast-furious-7.jpg",
+              "url" : "http://www.q8ryuk.com/wp-content/uploads/2014/11/fast-furious-7.jpg"
+            }]
+      },
+      { "name" : "The gang",
+        "wallpaper" : [ { "attribution" : null,
+              "author" : "Darryl Moran",
+              "author_url" : "https://www.flickr.com/photos/dwmoran/",
+              "license_name" : "CC-BY-SA-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
+              "name" : "Fast And Furious 3",
+              "source" : "https://www.flickr.com/photos/dwmoran/3728188773/in/photostream/",
+              "thumbUrl" : "http://www.theclippingpoint.net/blogs/wp-content/uploads/2014/02/Fast-Furious-7.jpg",
+              "url" : "http://www.theclippingpoint.net/blogs/wp-content/uploads/2014/02/Fast-Furious-7.jpg"
+            }, 
+             { "attribution" : null,
+              "author" : "Darryl Moran",
+              "author_url" : "https://www.flickr.com/photos/dwmoran/",
+              "license_name" : "CC-BY-SA-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
+              "name" : "Fast And Furious 4",
+              "source" : "https://www.flickr.com/photos/dwmoran/3728545775/in/photostream/",
+              "thumbUrl" : "http://www.thevipconcierge.com/images/EventImages/825631413825631413825631413825631413.jpg",
+              "url" : "http://www.thevipconcierge.com/images/EventImages/825631413825631413825631413825631413.jpg"
+            }]
+      },
+      { "name" : "Stars",
+        "wallpaper" : [
+             { "attribution" : null,
+              "author" : "Darryl Moran",
+              "author_url" : "https://www.flickr.com/photos/dwmoran/",
+              "license_name" : "CC-BY-SA-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
+              "name" : "Fast And Furious 5",
+              "source" : "https://www.flickr.com/photos/dwmoran/3728545775/in/photostream/",
+              "thumbUrl" : "http://fc02.deviantart.net/fs71/i/2014/253/e/e/fast_and_furious_7_poster_by_karimelmahalawy-d7yr27m.png",
+              "url" : "http://fc02.deviantart.net/fs71/i/2014/253/e/e/fast_and_furious_7_poster_by_karimelmahalawy-d7yr27m.png"
             },
-            {
-                "name": "Top",
-                "wallpaper": [
-                    {
-                        "author": "By Blah Blah Blah",
-                        "url": "https://lh4.googleusercontent.com/-6b7TgA8ZH_s/VBaaOrc_u8I/AAAAAAAACkQ/DD54P3LHzsQ/w812-h457-no/neymar-brazil-football-wallpaper.jpg",
-                        "thumbUrl": "https://lh4.googleusercontent.com/-6b7TgA8ZH_s/VBaaOrc_u8I/AAAAAAAACkQ/DD54P3LHzsQ/w812-h457-no/neymar-brazil-football-wallpaper.jpg",
-                        "name": "WP 1"
-                    },
-                    {
-                        "author": "By Blah Blah Blah",
-                        "url": "https://lh6.googleusercontent.com/-an5Hm_JYQEc/VBaaUuaJc8I/AAAAAAAACkY/XYACTHUvHPo/w731-h457-no/the-brazil-national-football-team-celebration-hd-wallpaper.jpg",
-                        "thumbUrl": "https://lh6.googleusercontent.com/-an5Hm_JYQEc/VBaaUuaJc8I/AAAAAAAACkY/XYACTHUvHPo/w731-h457-no/the-brazil-national-football-team-celebration-hd-wallpaper.jpg",
-                        "name": "WP 2"
-                    },
-                    {
-                        "author": "By Blah Blah Blah",
-                        "url": "https://lh5.googleusercontent.com/-V5nQhDKqhDU/VBaaMSE-KUI/AAAAAAAACj8/8_EOMfT0SVI/w738-h457-no/Arjen-Robben-10.jpg",
-                        "thumbUrl": "https://lh5.googleusercontent.com/-V5nQhDKqhDU/VBaaMSE-KUI/AAAAAAAACj8/8_EOMfT0SVI/w738-h457-no/Arjen-Robben-10.jpg",
-                        "name": "WP 3"
-                    },
-                    {
-                        "author": "By Blah Blah Blah",
-                        "url": "https://lh4.googleusercontent.com/-MmU9QBNi2WY/VBae_u24TFI/AAAAAAAAClQ/3M3Sf4sJFwU/w589-h457-no/342042.jpg",
-                        "thumbUrl": "https://lh4.googleusercontent.com/-MmU9QBNi2WY/VBae_u24TFI/AAAAAAAAClQ/3M3Sf4sJFwU/w589-h457-no/342042.jpg",
-                        "name": "WP 4"
-                    }
-                ]
+            { "attribution" : null,
+              "author" : "Darryl Moran",
+              "author_url" : "https://www.flickr.com/photos/dwmoran/",
+              "license_name" : "CC-BY-SA-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
+              "name" : "Fast And Furious 6",
+              "source" : "https://www.flickr.com/photos/dwmoran/3728559819/in/photostream/",
+              "thumbUrl" : "http://fc05.deviantart.net/fs70/i/2011/118/c/5/paul_walker_2_fast_2_furious_by_londonicious-d3f2rta.jpg",
+              "url" : "http://fc05.deviantart.net/fs70/i/2011/118/c/5/paul_walker_2_fast_2_furious_by_londonicious-d3f2rta.jpg"
             }
-    }
-}
+          ]
+      }
+    ] }
