--- a/fifa3-manifest.json
+++ b/fifa3-manifest.json
@@ -6,7 +6,7 @@
               "author_url" : "https://www.hdwallpapers.in",
               "license_name" : "CC-BY-2.0",
               "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Fast And Furious 1",
+              "name" : "Brazil & Croatia",
               "source" : "http://upload.wikimedia.org/wikipedia/commons/6/69/Brazil_and_Croatia_match_at_the_FIFA_World_Cup_2014-06-12_(16).jpg",
               "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/6/69/Brazil_and_Croatia_match_at_the_FIFA_World_Cup_2014-06-12_(16).jpg",
               "url" : "http://upload.wikimedia.org/wikipedia/commons/6/69/Brazil_and_Croatia_match_at_the_FIFA_World_Cup_2014-06-12_(16).jpg"
@@ -16,7 +16,7 @@
               "author_url" : "https://www.flickr.com/photos/dwmoran/",
               "license_name" : "CC-BY-SA-2.0",
               "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
-              "name" : "Fast And Furious 2",
+              "name" : "Fifa North korea",
               "source" : "http://upload.wikimedia.org/wikipedia/commons/8/86/FIFA_World_Cup_2010_Brazil_North_Korea_5.jpg",
               "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/8/86/FIFA_World_Cup_2010_Brazil_North_Korea_5.jpg",
               "url" : "http://upload.wikimedia.org/wikipedia/commons/8/86/FIFA_World_Cup_2010_Brazil_North_Korea_5.jpg"
