--- a/fifa3-manifest.json
+++ b/fifa3-manifest.json
@@ -2,8 +2,8 @@
 "category" : [ 
         { "name" : "Fifa14",
         "wallpaper" : [ { "attribution" : null,
-              "author" : "HDwallpapers.in",
-              "author_url" : "https://www.hdwallpapers.in",
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-2.0",
               "license_url" : "https://creativecommons.org/licenses/by/2.0/",
               "name" : "Brazil & Croatia",
@@ -12,8 +12,8 @@
               "url" : "http://upload.wikimedia.org/wikipedia/commons/6/69/Brazil_and_Croatia_match_at_the_FIFA_World_Cup_2014-06-12_(16).jpg"
             }, 
                         { "attribution" : null,
-              "author" : "Darryl Moran",
-              "author_url" : "https://www.flickr.com/photos/dwmoran/",
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-SA-2.0",
               "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
               "name" : "Fifa North korea",
