--- a/fifa3-manifest.json
+++ b/fifa3-manifest.json
@@ -1,6 +1,6 @@
 { 
 "category" : [ 
-        { "name" : "Fifa14",
+        { "name" : "Fifa Wallpapers Free",
         "wallpaper" : [ { "attribution" : null,
               "author" : "Wikipedia",
               "author_url" : "https://www.wikipedia.org",
