--- a/fifa3-manifest.json
+++ b/fifa3-manifest.json
@@ -1,7 +1,8 @@
 { 
 "category" : [ 
         { "name" : "Fifa Wallpapers Free",
-        "wallpaper" : [ { "attribution" : null,
+        "wallpaper" : [ 
+             { "attribution" : null,
               "author" : "Wikipedia",
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-2.0",
@@ -11,7 +12,47 @@
               "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/6/69/Brazil_and_Croatia_match_at_the_FIFA_World_Cup_2014-06-12_(16).jpg",
               "url" : "http://upload.wikimedia.org/wikipedia/commons/6/69/Brazil_and_Croatia_match_at_the_FIFA_World_Cup_2014-06-12_(16).jpg"
             }, 
-                        { "attribution" : null,
+               { "attribution" : null,
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
+              "license_name" : "CC-BY-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
+              "name" : "Austria vs Faroe Islands",
+              "source" : "http://upload.wikimedia.org/wikipedia/commons/e/e5/FIFA_WC-qualification_2014_-_Austria_vs_Faroe_Islands_2013-03-22_(82).jpg",
+              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/e/e5/FIFA_WC-qualification_2014_-_Austria_vs_Faroe_Islands_2013-03-22_(82).jpg",
+              "url" : "http://upload.wikimedia.org/wikipedia/commons/e/e5/FIFA_WC-qualification_2014_-_Austria_vs_Faroe_Islands_2013-03-22_(82).jpg"
+            }, 
+               { "attribution" : null,
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
+              "license_name" : "CC-BY-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
+              "name" : "Grassy",
+              "source" : "http://upload.wikimedia.org/wikipedia/commons/7/74/Philips_Stadion.jpg",
+              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/7/74/Philips_Stadion.jpg",
+              "url" : "http://upload.wikimedia.org/wikipedia/commons/7/74/Philips_Stadion.jpg"
+            }, 
+                    { "attribution" : null,
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
+              "license_name" : "CC-BY-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
+              "name" : "Chile Heros",
+              "source" : "http://upload.wikimedia.org/wikipedia/commons/f/f3/Chilena_de_Sergio_Ramos.jpg",
+              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/f/f3/Chilena_de_Sergio_Ramos.jpg",
+              "url" : "http://upload.wikimedia.org/wikipedia/commons/f/f3/Chilena_de_Sergio_Ramos.jpg"
+            }, 
+                    { "attribution" : null,
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
+              "license_name" : "CC-BY-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
+              "name" : "Upcoming Messi!",
+              "source" : "http://upload.wikimedia.org/wikipedia/commons/0/0d/Caracas_2010_Series.jpg",
+              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/0/0d/Caracas_2010_Series.jpg",
+              "url" : "http://upload.wikimedia.org/wikipedia/commons/0/0d/Caracas_2010_Series.jpg"
+            }, 
+            { "attribution" : null,
               "author" : "Wikipedia",
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-SA-2.0",
@@ -20,6 +61,7 @@
               "source" : "http://upload.wikimedia.org/wikipedia/commons/8/86/FIFA_World_Cup_2010_Brazil_North_Korea_5.jpg",
               "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/8/86/FIFA_World_Cup_2010_Brazil_North_Korea_5.jpg",
               "url" : "http://upload.wikimedia.org/wikipedia/commons/8/86/FIFA_World_Cup_2010_Brazil_North_Korea_5.jpg"
-            }]
-}
+            }
+        ]
+    }
     ] }
