--- a/fifa-free-manifest.json
+++ b/fifa-free-manifest.json
@@ -7,10 +7,64 @@
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-2.0",
               "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Brazil & Croatia",
-              "source" : "http://upload.wikimedia.org/wikipedia/commons/6/69/Brazil_and_Croatia_match_at_the_FIFA_World_Cup_2014-06-12_(16).jpg",
-              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/6/69/Brazil_and_Croatia_match_at_the_FIFA_World_Cup_2014-06-12_(16).jpg",
-              "url" : "http://upload.wikimedia.org/wikipedia/commons/6/69/Brazil_and_Croatia_match_at_the_FIFA_World_Cup_2014-06-12_(16).jpg"
+              "name" : "Beauty Grounds",
+              "source" : "http://layout1.eurosport.com/i/v8/match/backgrounds/large/background_v8_s22.jpg",
+              "thumbUrl" : "http://layout1.eurosport.com/i/v8/match/backgrounds/large/background_v8_s22.jpg",
+              "url" : "http://layout1.eurosport.com/i/v8/match/backgrounds/large/background_v8_s22.jpg"
+            }, 
+                                { "attribution" : null,
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
+              "license_name" : "CC-BY-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
+              "name" : "Germany Vs Portugal",
+              "source" : "http://upload.wikimedia.org/wikipedia/commons/1/10/GER-POR_Euro_2012_(18).jpg",
+              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/1/10/GER-POR_Euro_2012_(18).jpg",
+              "url" : "http://upload.wikimedia.org/wikipedia/commons/1/10/GER-POR_Euro_2012_(18).jpg"
+            }, 
+            
+                                { "attribution" : null,
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
+              "license_name" : "CC-BY-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
+              "name" : "Deco in Action!",
+              "source" : "http://upload.wikimedia.org/wikipedia/commons/a/a8/Portugal_2-3_Denmark,_Deco.jpg",
+              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/a/a8/Portugal_2-3_Denmark,_Deco.jpg",
+              "url" : "http://upload.wikimedia.org/wikipedia/commons/a/a8/Portugal_2-3_Denmark,_Deco.jpg"
+            }, 
+            
+                                            { "attribution" : null,
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
+              "license_name" : "CC-BY-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
+              "name" : "Neymar!",
+              "source" : "http://upload.wikimedia.org/wikipedia/commons/3/3c/Pique%26neymar.jpg",
+              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/3/3c/Pique%26neymar.jpg",
+              "url" : "http://upload.wikimedia.org/wikipedia/commons/3/3c/Pique%26neymar.jpg"
+            }, 
+            
+                                            { "attribution" : null,
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
+              "license_name" : "CC-BY-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
+              "name" : "",
+              "source" : "",
+              "thumbUrl" : "",
+              "url" : ""
+            }, 
+            
+                                            { "attribution" : null,
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
+              "license_name" : "CC-BY-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
+              "name" : "Messi",
+              "source" : "http://www.kingsport.it/images/stories/20120511-lionel-andres-messi-g.jpg",
+              "thumbUrl" : "http://www.kingsport.it/images/stories/20120511-lionel-andres-messi-g.jpg",
+              "url" : "http://www.kingsport.it/images/stories/20120511-lionel-andres-messi-g.jpg"
             }, 
                { "attribution" : null,
               "author" : "Wikipedia",
