--- a/fifa-free-manifest.json
+++ b/fifa-free-manifest.json
@@ -1,6 +1,6 @@
 { 
 "category" : [ 
-        { "name" : "Fifa Wallpapers Free",
+        { "name" : "Fifa Wallpapers for Free",
         "wallpaper" : [ 
              { "attribution" : null,
               "author" : "Wikipedia",
