--- a/icc-wc-manifest.json
+++ b/icc-wc-manifest.json
@@ -1,16 +1,16 @@
 { 
 "category" : [ 
-        { "name" : "Fifa Wallpapers for Free",
+        { "name" : "Cricket World Cup Wallpapers",
         "wallpaper" : [ 
              { "attribution" : null,
               "author" : "Wikipedia",
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-2.0",
               "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Beauty Grounds",
-              "source" : "http://layout1.eurosport.com/i/v8/match/backgrounds/large/background_v8_s22.jpg",
-              "thumbUrl" : "http://layout1.eurosport.com/i/v8/match/backgrounds/large/background_v8_s22.jpg",
-              "url" : "http://layout1.eurosport.com/i/v8/match/backgrounds/large/background_v8_s22.jpg"
+              "name" : "Great Sachin!",
+              "source" : "https://wallpapers99.com/Icc_Cricket_World_Cup_2011--w1600x1200--0--0--images/wallpaper/1600x1200/Icc_Cricket_World_Cup_2011_35471.jpg",
+              "thumbUrl" : "https://wallpapers99.com/Icc_Cricket_World_Cup_2011--w1600x1200--0--0--images/wallpaper/1600x1200/Icc_Cricket_World_Cup_2011_35471.jpg",
+              "url" : "https://wallpapers99.com/Icc_Cricket_World_Cup_2011--w1600x1200--0--0--images/wallpaper/1600x1200/Icc_Cricket_World_Cup_2011_35471.jpg"
             }, 
                                 { "attribution" : null,
               "author" : "Wikipedia",
