--- a/icc-wc-manifest.json
+++ b/icc-wc-manifest.json
@@ -28,10 +28,10 @@
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-2.0",
               "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Deco in Action!",
-              "source" : "http://upload.wikimedia.org/wikipedia/commons/a/a8/Portugal_2-3_Denmark,_Deco.jpg",
-              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/a/a8/Portugal_2-3_Denmark,_Deco.jpg",
-              "url" : "http://upload.wikimedia.org/wikipedia/commons/a/a8/Portugal_2-3_Denmark,_Deco.jpg"
+              "name" : "Sehwag",
+              "source" : "http://stuffpoint.com/indian-cricket/image/49834-indian-cricket-indian-super-fast.jpg",
+              "thumbUrl" : "http://stuffpoint.com/indian-cricket/image/49834-indian-cricket-indian-super-fast.jpg",
+              "url" : "http://stuffpoint.com/indian-cricket/image/49834-indian-cricket-indian-super-fast.jpg"
             }, 
             
                                             { "attribution" : null,
@@ -39,10 +39,10 @@
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-2.0",
               "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Neymar!",
-              "source" : "http://upload.wikimedia.org/wikipedia/commons/3/3c/Pique%26neymar.jpg",
-              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/3/3c/Pique%26neymar.jpg",
-              "url" : "http://upload.wikimedia.org/wikipedia/commons/3/3c/Pique%26neymar.jpg"
+              "name" : "Travis birt!",
+              "source" : "http://3.bp.blogspot.com/-PUXZ9nnyKBI/T0u_vxzGRzI/AAAAAAAAB6k/NY7LPZWI3cM/s1600/Travis_Birt_Wallpapers.jpg",
+              "thumbUrl" : "http://3.bp.blogspot.com/-PUXZ9nnyKBI/T0u_vxzGRzI/AAAAAAAAB6k/NY7LPZWI3cM/s1600/Travis_Birt_Wallpapers.jpg",
+              "url" : "http://3.bp.blogspot.com/-PUXZ9nnyKBI/T0u_vxzGRzI/AAAAAAAAB6k/NY7LPZWI3cM/s1600/Travis_Birt_Wallpapers.jpg"
             }, 
             
                                             { "attribution" : null,
@@ -50,10 +50,10 @@
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-2.0",
               "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "",
-              "source" : "",
-              "thumbUrl" : "",
-              "url" : ""
+              "name" : "Aussies",
+              "source" : "http://4hdwall.com/wp-content/uploads/2012/11/australian-players-hd-wallpapers.jpg",
+              "thumbUrl" : "http://4hdwall.com/wp-content/uploads/2012/11/australian-players-hd-wallpapers.jpg",
+              "url" : "http://4hdwall.com/wp-content/uploads/2012/11/australian-players-hd-wallpapers.jpg"
             }, 
             
                                             { "attribution" : null,
@@ -61,60 +61,70 @@
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-2.0",
               "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Messi",
-              "source" : "http://www.kingsport.it/images/stories/20120511-lionel-andres-messi-g.jpg",
-              "thumbUrl" : "http://www.kingsport.it/images/stories/20120511-lionel-andres-messi-g.jpg",
-              "url" : "http://www.kingsport.it/images/stories/20120511-lionel-andres-messi-g.jpg"
+              "name" : "The Lions",
+              "source" : "http://images.wallpapersmela.com/2015/01/Sri-Lanka-Cricket-Team-hd.jpg",
+              "thumbUrl" : "http://images.wallpapersmela.com/2015/01/Sri-Lanka-Cricket-Team-hd.jpg",
+              "url" : "http://images.wallpapersmela.com/2015/01/Sri-Lanka-Cricket-Team-hd.jpg"
             }, 
                { "attribution" : null,
               "author" : "Wikipedia",
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-2.0",
               "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Austria vs Faroe Islands",
-              "source" : "http://upload.wikimedia.org/wikipedia/commons/e/e5/FIFA_WC-qualification_2014_-_Austria_vs_Faroe_Islands_2013-03-22_(82).jpg",
-              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/e/e5/FIFA_WC-qualification_2014_-_Austria_vs_Faroe_Islands_2013-03-22_(82).jpg",
-              "url" : "http://upload.wikimedia.org/wikipedia/commons/e/e5/FIFA_WC-qualification_2014_-_Austria_vs_Faroe_Islands_2013-03-22_(82).jpg"
+              "name" : "Champs",
+              "source" : "http://widewallpapers.info/wp-content/uploads/2014/10/1920-1080_1087-Cricket-Wallpapers-HD-free-wallpapers-backgrounds-images-FHD-4k-download-2014-2015-2016.jpg",
+              "thumbUrl" : "http://widewallpapers.info/wp-content/uploads/2014/10/1920-1080_1087-Cricket-Wallpapers-HD-free-wallpapers-backgrounds-images-FHD-4k-download-2014-2015-2016.jpg",
+              "url" : "http://widewallpapers.info/wp-content/uploads/2014/10/1920-1080_1087-Cricket-Wallpapers-HD-free-wallpapers-backgrounds-images-FHD-4k-download-2014-2015-2016.jpg"
             }, 
                { "attribution" : null,
               "author" : "Wikipedia",
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-2.0",
               "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Grassy",
-              "source" : "http://upload.wikimedia.org/wikipedia/commons/7/74/Philips_Stadion.jpg",
-              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/7/74/Philips_Stadion.jpg",
-              "url" : "http://upload.wikimedia.org/wikipedia/commons/7/74/Philips_Stadion.jpg"
+              "name" : "Pakisthan Team",
+              "source" : "http://cricketchaska.com/wp-content/uploads/2015/01/Pakistan-team-hd-wallpapers-6.jpg",
+              "thumbUrl" : "http://cricketchaska.com/wp-content/uploads/2015/01/Pakistan-team-hd-wallpapers-6.jpg",
+              "url" : "http://cricketchaska.com/wp-content/uploads/2015/01/Pakistan-team-hd-wallpapers-6.jpg"
+            }, 
+                    { "attribution" : null,
+              "author" : "wallpapersmela.com",
+              "author_url" : "https://wallpapersmela.com",
+              "license_name" : "CC-BY-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
+              "name" : "Bangladesh Lions",
+              "source" : "http://images.wallpapersmela.com/2015/01/ICC-Cricket-World-Cup-2015-Bangladesh.jpg",
+              "thumbUrl" : "http://images.wallpapersmela.com/2015/01/ICC-Cricket-World-Cup-2015-Bangladesh.jpg",
+              "url" : "http://images.wallpapersmela.com/2015/01/ICC-Cricket-World-Cup-2015-Bangladesh.jpg"
             }, 
                     { "attribution" : null,
               "author" : "Wikipedia",
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-2.0",
               "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Chile Heros",
-              "source" : "http://upload.wikimedia.org/wikipedia/commons/f/f3/Chilena_de_Sergio_Ramos.jpg",
-              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/f/f3/Chilena_de_Sergio_Ramos.jpg",
-              "url" : "http://upload.wikimedia.org/wikipedia/commons/f/f3/Chilena_de_Sergio_Ramos.jpg"
-            }, 
-                    { "attribution" : null,
-              "author" : "Wikipedia",
-              "author_url" : "https://www.wikipedia.org",
-              "license_name" : "CC-BY-2.0",
-              "license_url" : "https://creativecommons.org/licenses/by/2.0/",
-              "name" : "Upcoming Messi!",
-              "source" : "http://upload.wikimedia.org/wikipedia/commons/0/0d/Caracas_2010_Series.jpg",
-              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/0/0d/Caracas_2010_Series.jpg",
-              "url" : "http://upload.wikimedia.org/wikipedia/commons/0/0d/Caracas_2010_Series.jpg"
+              "name" : "New Zealands",
+              "source" : "http://cricket15.com/wp-content/uploads/2015/01/New-Zealand-Squad-for-Cricket-World-Cup-2015.jpg",
+              "thumbUrl" : "http://cricket15.com/wp-content/uploads/2015/01/New-Zealand-Squad-for-Cricket-World-Cup-2015.jpg",
+              "url" : "http://cricket15.com/wp-content/uploads/2015/01/New-Zealand-Squad-for-Cricket-World-Cup-2015.jpg"
             }, 
             { "attribution" : null,
               "author" : "Wikipedia",
               "author_url" : "https://www.wikipedia.org",
               "license_name" : "CC-BY-SA-2.0",
               "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
-              "name" : "Fifa North korea",
-              "source" : "http://upload.wikimedia.org/wikipedia/commons/8/86/FIFA_World_Cup_2010_Brazil_North_Korea_5.jpg",
-              "thumbUrl" : "http://upload.wikimedia.org/wikipedia/commons/8/86/FIFA_World_Cup_2010_Brazil_North_Korea_5.jpg",
-              "url" : "http://upload.wikimedia.org/wikipedia/commons/8/86/FIFA_World_Cup_2010_Brazil_North_Korea_5.jpg"
+              "name" : "West Indians",
+              "source" : "http://images.wallpapersmela.com/2015/01/West-Indies-Cricket-Wallpapers.jpg",
+              "thumbUrl" : "http://images.wallpapersmela.com/2015/01/West-Indies-Cricket-Wallpapers.jpg",
+              "url" : "http://images.wallpapersmela.com/2015/01/West-Indies-Cricket-Wallpapers.jpg"
+            },
+                        { "attribution" : null,
+              "author" : "Wikipedia",
+              "author_url" : "https://www.wikipedia.org",
+              "license_name" : "CC-BY-SA-2.0",
+              "license_url" : "https://creativecommons.org/licenses/by-sa/2.0/",
+              "name" : "South Africa Heroes",
+              "source" : "http://icc-live.s3.amazonaws.com/cms/media/images/630x420/64689.jpg",
+              "thumbUrl" : "http://icc-live.s3.amazonaws.com/cms/media/images/630x420/64689.jpg",
+              "url" : "http://icc-live.s3.amazonaws.com/cms/media/images/630x420/64689.jpg"
             }
         ]
     }
